fix(dropdown): fix dropdown visually detatched from field on firefox

--- a/components/src/components/dropdown/dropdown.scss
+++ b/components/src/components/dropdown/dropdown.scss
@@ -121,12 +121,6 @@
     }
   }
 
-  &:has(span.sdds-dropdown-label-outside) {
-    .sdds-dropdown-menu {
-      margin-bottom: -24px;
-    }
-  }
-
   .sdds-dropdown-menu {
     z-index: 10000;
 
@@ -181,6 +175,12 @@
       box-shadow: 0 -1px 3px 0 rgb(0 0 0 / 10%);
       transform-origin: bottom;
     }
+  }
+}
+
+:host(.sdds-dropdown--open-upwards[label-position="outside"]) {
+  span.sdds-dropdown-menu {
+    bottom: calc(100% - 24px);
   }
 }
 
